Push on 11-12-2021 11:38AM

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.crm.SDET26.Opportunity.ClickOnSaveAndAllTheFillSareSaveOrNot</td>
+<td>com.crm.SDET26.practice.PracticeCreateOpportunityAndClickonSave</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>cickOnSaveAndAllTheFillSareSaveOrNot</td>
-<td>SmokeTest </td>
+<td>createOpportunitywithSalesStageClosedWon</td>
+<td>RegressionTest </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
