src/main/resources updated

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,27 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num attn">2</td><td class="num">116,325</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">31,120</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.crm.SDET26.Opportunity.ClickOnSaveAndAllTheFillSareSaveOrNot</td><td><a href="#m0">cickOnSaveAndAllTheFillSareSaveOrNot</a></td><td rowspan="1">1639151159695</td><td rowspan="1">18842</td></tr><tr class="failedodd"><td rowspan="1">com.crm.SDET26.Opportunity.CreateOpportunitywithSalesStageClosedLost</td><td><a href="#m1">createOpportunitywithSalesStageClosedLost</a></td><td rowspan="1">1639151132603</td><td rowspan="1">19175</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.crm.SDET26.Opportunity.ClickOnCancelAndAllTheFillsAreClearOrNot</td><td><a href="#m2">clickOnCancelAndAlltheFillsClearedorNot</a></td><td rowspan="1">1639151090780</td><td rowspan="1">44331</td></tr><tr class="passedodd"><td rowspan="1">com.crm.SDET26.Opportunity.CreateOpportunityWithSalesStageProposalOrPriceQuote</td><td><a href="#m3">createOpportunityWithSalesStageProposalOrPriceQuote</a></td><td rowspan="1">1639151090726</td><td rowspan="1">34673</td></tr><tr class="passedeven"><td rowspan="1">com.crm.SDET26.Opportunity.CreateOpportunitywithSalesStageClosedWon</td><td><a href="#m4">createOpportunitywithSalesStageClosedWon</a></td><td rowspan="1">1639151169055</td><td rowspan="1">17825</td></tr><tr class="passedodd"><td rowspan="1">com.crm.SDET26.Opportunity.CreateOpportunitywithSalesStageNegotiationOrReview</td><td><a href="#m5">createOpportunitywithSalesStageNegotiationOrReview</a></td><td rowspan="1">1639151142890</td><td rowspan="1">19308</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.crm.SDET26.Opportunity.ClickOnCancelAndAllTheFillsAreClearOrNotTest</td><td><a href="#m0">clickOnCancelAndAlltheFillsClearedorNot</a></td><td rowspan="1">1639203480006</td><td rowspan="1">22790</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.crm.SDET26.Opportunity.ClickOnSaveAndAllTheFillSareSaveOrNot#cickOnSaveAndAllTheFillSareSaveOrNot</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at com.crm.SDET26.Opportunity.ClickOnSaveAndAllTheFillSareSaveOrNot.cickOnSaveAndAllTheFillSareSaveOrNot(ClickOnSaveAndAllTheFillSareSaveOrNot.java:71)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
-	at java.lang.Thread.run(Unknown Source)
-... Removed 14 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.crm.SDET26.Opportunity.CreateOpportunitywithSalesStageClosedLost#createOpportunitywithSalesStageClosedLost</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	expected [Team Selling] but found [Team Selling  ]
-	at com.crm.SDET26.Opportunity.CreateOpportunitywithSalesStageClosedLost.createOpportunitywithSalesStageClosedLost(CreateOpportunitywithSalesStageClosedLost.java:69)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
-	at java.lang.Thread.run(Unknown Source)
-... Removed 11 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.crm.SDET26.Opportunity.ClickOnCancelAndAllTheFillsAreClearOrNot#clickOnCancelAndAlltheFillsClearedorNot</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.crm.SDET26.Opportunity.CreateOpportunityWithSalesStageProposalOrPriceQuote#createOpportunityWithSalesStageProposalOrPriceQuote</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.crm.SDET26.Opportunity.CreateOpportunitywithSalesStageClosedWon#createOpportunitywithSalesStageClosedWon</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.crm.SDET26.Opportunity.CreateOpportunitywithSalesStageNegotiationOrReview#createOpportunitywithSalesStageNegotiationOrReview</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.crm.SDET26.Opportunity.ClickOnCancelAndAllTheFillsAreClearOrNotTest#clickOnCancelAndAlltheFillsClearedorNot</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
