--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fcfece">  <td>21/12/09 23:28:40</td>   <td>0</td> <td title="&gt;&gt;BaseClass.dataBaseConnection()[pri:0, instance:com.crm.SDET26.practice.PracticeCreateOpportunityAndClickonSave@7d9d1a19]">&gt;&gt;dataBaseConnection</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/12/09 23:28:40</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.browserLaunch()[pri:0, instance:com.crm.SDET26.practice.PracticeCreateOpportunityAndClickonSave@7d9d1a19]">&gt;&gt;browserLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/12/09 23:28:42</td>   <td>2425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.crm.SDET26.practice.PracticeCreateOpportunityAndClickonSave@7d9d1a19]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>21/12/09 23:28:45</td>   <td>5008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PracticeCreateOpportunityAndClickonSave.createOpportunitywithSalesStageClosedWon()[pri:0, instance:com.crm.SDET26.practice.PracticeCreateOpportunityAndClickonSave@7d9d1a19]">createOpportunitywithSalesStageClosedWon</td> 
-  <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/12/09 23:28:57</td>   <td>17448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logout()[pri:0, instance:com.crm.SDET26.practice.PracticeCreateOpportunityAndClickonSave@7d9d1a19]">&lt;&lt;logout</td> 
-<td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/12/09 23:28:58</td>   <td>18420</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.crm.SDET26.practice.PracticeCreateOpportunityAndClickonSave@7d9d1a19]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>21/12/09 23:28:59</td>   <td>19227</td> <td title="&lt;&lt;BaseClass.disconnectDB()[pri:0, instance:com.crm.SDET26.practice.PracticeCreateOpportunityAndClickonSave@7d9d1a19]">&lt;&lt;disconnectDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
+<tr bgcolor="fcfece">  <td>21/12/11 11:47:53</td>   <td>0</td> <td title="&gt;&gt;BaseClass.dataBaseConnection()[pri:0, instance:com.crm.SDET26.Opportunity.ClickOnCancelAndAllTheFillsAreClearOrNotTest@42e26948]">&gt;&gt;dataBaseConnection</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
+<tr bgcolor="fcfece">  <td>21/12/11 11:47:53</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.browserLaunch()[pri:0, instance:com.crm.SDET26.Opportunity.ClickOnCancelAndAllTheFillsAreClearOrNotTest@42e26948]">&gt;&gt;browserLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
+<tr bgcolor="fcfece">  <td>21/12/11 11:47:56</td>   <td>3212</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.crm.SDET26.Opportunity.ClickOnCancelAndAllTheFillsAreClearOrNotTest@42e26948]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>21/12/11 11:48:00</td>   <td>6420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClickOnCancelAndAllTheFillsAreClearOrNotTest.clickOnCancelAndAlltheFillsClearedorNot()[pri:0, instance:com.crm.SDET26.Opportunity.ClickOnCancelAndAllTheFillsAreClearOrNotTest@42e26948]">clickOnCancelAndAlltheFillsClearedorNot</td> 
+  <td>main@1690287238</td>   <td></td> </tr>
+<tr bgcolor="fcfece">  <td>21/12/11 11:48:22</td>   <td>29210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logout()[pri:0, instance:com.crm.SDET26.Opportunity.ClickOnCancelAndAllTheFillsAreClearOrNotTest@42e26948]">&lt;&lt;logout</td> 
+<td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
+<tr bgcolor="fcfece">  <td>21/12/11 11:48:24</td>   <td>30430</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.crm.SDET26.Opportunity.ClickOnCancelAndAllTheFillsAreClearOrNotTest@42e26948]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
+<tr bgcolor="fcfece">  <td>21/12/11 11:48:24</td>   <td>31130</td> <td title="&lt;&lt;BaseClass.disconnectDB()[pri:0, instance:com.crm.SDET26.Opportunity.ClickOnCancelAndAllTheFillsAreClearOrNotTest@42e26948]">&lt;&lt;disconnectDB</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
 </table>
