--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">31,120</td><td></td><td></td></tr>
+<tr><th colspan="7">Failed suite [Suite]</th></tr>
+<tr><td><a href="#t0">Test(failed)</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">55,266</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.crm.SDET26.Opportunity.ClickOnCancelAndAllTheFillsAreClearOrNotTest</td><td><a href="#m0">clickOnCancelAndAlltheFillsClearedorNot</a></td><td rowspan="1">1639203480006</td><td rowspan="1">22790</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Failed suite [Suite]</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test(failed) &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.crm.SDET26.opportunity.ClickOnSaveAndAllTheFillSareSaveOrNotTest</td><td><a href="#m0">cickOnSaveAndAllTheFillSareSaveOrNot</a></td><td rowspan="1">1639334085110</td><td rowspan="1">22480</td></tr><tr class="failedodd"><td rowspan="1">com.crm.SDET26.opportunity.CreateOpportunitywithSalesStageClosedLostTest</td><td><a href="#m1">createOpportunitywithSalesStageClosedLost</a></td><td rowspan="1">1639334114079</td><td rowspan="1">12611</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.crm.SDET26.Opportunity.ClickOnCancelAndAllTheFillsAreClearOrNotTest#clickOnCancelAndAlltheFillsClearedorNot</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test(failed)</h2><h3 id="m0">com.crm.SDET26.opportunity.ClickOnSaveAndAllTheFillSareSaveOrNotTest#cickOnSaveAndAllTheFillSareSaveOrNot</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at com.crm.SDET26.opportunity.ClickOnSaveAndAllTheFillSareSaveOrNotTest.cickOnSaveAndAllTheFillSareSaveOrNot(ClickOnSaveAndAllTheFillSareSaveOrNotTest.java:71)
+... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.crm.SDET26.opportunity.CreateOpportunitywithSalesStageClosedLostTest#createOpportunitywithSalesStageClosedLost</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+	expected [Team Selling] but found [Team Selling  ]
+	at com.crm.SDET26.opportunity.CreateOpportunitywithSalesStageClosedLostTest.createOpportunitywithSalesStageClosedLost(CreateOpportunitywithSalesStageClosedLostTest.java:69)
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
