--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.crm.SDET26.Opportunity.ClickOnSaveAndAllTheFillSareSaveOrNot</td>
+<td>com.crm.SDET26.opportunity.ClickOnSaveAndAllTheFillSareSaveOrNotTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -43,14 +43,14 @@
 <td>closeBrowser</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>com.crm.SDET26.Opportunity.CreateOpportunitywithSalesStageClosedWon</td>
+<td>com.crm.SDET26.opportunity.CreateOpportunityWithSalesStageProposalOrPriceQuoteTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createOpportunitywithSalesStageClosedWon</td>
+<td>createOpportunityWithSalesStageProposalOrPriceQuote</td>
 <td>RegressionTest </td>
 </tr>
 <tr>
@@ -82,7 +82,7 @@
 <td>closeBrowser</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>com.crm.SDET26.Opportunity.ClickOnCancelAndAllTheFillsAreClearOrNot</td>
+<td>com.crm.SDET26.opportunity.ClickOnCancelAndAllTheFillsAreClearOrNotTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -121,7 +121,7 @@
 <td>closeBrowser</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>com.crm.SDET26.Opportunity.CreateOpportunitywithSalesStageClosedLost</td>
+<td>com.crm.SDET26.opportunity.CreateOpportunitywithSalesStageClosedLostTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -160,14 +160,14 @@
 <td>closeBrowser</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>com.crm.SDET26.Opportunity.CreateOpportunitywithSalesStageNegotiationOrReview</td>
+<td>com.crm.SDET26.opportunity.CreateOpportunitywithSalesStageClosedWonTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createOpportunitywithSalesStageNegotiationOrReview</td>
+<td>createOpportunitywithSalesStageClosedWon</td>
 <td>RegressionTest </td>
 </tr>
 <tr>
@@ -199,14 +199,14 @@
 <td>closeBrowser</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>com.crm.SDET26.Opportunity.CreateOpportunityWithSalesStageProposalOrPriceQuote</td>
+<td>com.crm.SDET26.opportunity.CreateOpportunitywithSalesStageNegotiationOrReviewTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createOpportunityWithSalesStageProposalOrPriceQuote</td>
+<td>createOpportunitywithSalesStageNegotiationOrReview</td>
 <td>RegressionTest </td>
 </tr>
 <tr>
