--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -4,9 +4,13 @@
 <tr><td>com.crm.SDET26.genericUtility.BaseClass.dataBaseConnection</td></tr>
 <tr><td>com.crm.SDET26.genericUtility.BaseClass.dataBaseConnection</td></tr>
 <tr><td>com.crm.SDET26.genericUtility.BaseClass.dataBaseConnection</td></tr>
+<tr><td>com.crm.SDET26.opportunity.CreateOpportunityWithSalesStageProposalOrPriceQuoteTest.createOpportunityWithSalesStageProposalOrPriceQuote</td></tr>
+<tr><td>com.crm.SDET26.opportunity.CreateOpportunitywithSalesStageClosedWonTest.createOpportunitywithSalesStageClosedWon</td></tr>
 <tr><td>com.crm.SDET26.genericUtility.BaseClass.disconnectDB</td></tr>
 <tr><td>com.crm.SDET26.genericUtility.BaseClass.disconnectDB</td></tr>
 <tr><td>com.crm.SDET26.genericUtility.BaseClass.disconnectDB</td></tr>
 <tr><td>com.crm.SDET26.genericUtility.BaseClass.disconnectDB</td></tr>
 <tr><td>com.crm.SDET26.genericUtility.BaseClass.disconnectDB</td></tr>
+<tr><td>com.crm.SDET26.opportunity.CreateOpportunitywithSalesStageNegotiationOrReviewTest.createOpportunitywithSalesStageNegotiationOrReview</td></tr>
+<tr><td>com.crm.SDET26.opportunity.CreateOpportunitywithSalesStageClosedLostTest.createOpportunitywithSalesStageClosedLost</td></tr>
 </table>
